deployment-readiness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        ports:
          - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          # exec:
          #   command:
          #   - stat
          #   - /tmp/ready
          initialDelaySeconds: 10
          periodSeconds: 5
