pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-pod
spec:
  volumes:
    - name: config-volume
      configMap:
        name: special-config
  containers:
    - name: test-container
      image: registry.k8s.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
      #define all of the ConfigMap's data as container environment variables
      volumeMounts:
        - name: config-volume
          mountPath: /tmp/volume
  restartPolicy: Never
