pod-security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-pod
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: test-container
      image: registry.k8s.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
      securityContext:
        runAsUser: 2000
        allowPrivilegeEscalation: false
        capabilities:
          add: ["NET_ADMIN","SYS_TIME"]
  restartPolicy: Never
